--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "courier",
         "shipping"
     ],
-    "homepage": "https://bitbucket.org/sylapi/courier",
+    "homepage": "https://github.com/sylapi/courier",
     "license": "MIT",
     "authors": [
         {
@@ -14,10 +14,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=7.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": { "Sylapi\\Courier\\" : "src" }
