--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,16 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0"
+        "php": ">=7.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": { "Sylapi\\Courier\\" : "src" }
     },
+    "autoload-dev": {
+        "psr-4": { "Sylapi\\Courier\\Tests\\": "tests/" }
+    },      
     "prefer-stable": false
 }
