--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=7.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^0.12.77"
     },
     "autoload": {
         "psr-4": { "Sylapi\\Courier\\" : "src" }
