--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
     },
     "autoload-dev": {
         "psr-4": { "Sylapi\\Courier\\Tests\\": "tests/" }
-    },      
+    },
+    "scripts": {
+        "tests": "vendor/bin/phpunit",
+        "phpstan": "vendor/bin/phpstan analyse src tests",
+        "coverage": "XDEBUG_MODE=coverage  vendor/bin/phpunit --coverage-html ./coverage/"
+    },    
     "prefer-stable": false
 }
