--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3.0"
+        "php": ">=7.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -29,7 +29,8 @@
     "scripts": {
         "tests": "vendor/bin/phpunit",
         "phpstan": "vendor/bin/phpstan analyse src tests",
-        "coverage": "XDEBUG_MODE=coverage  vendor/bin/phpunit --coverage-html ./coverage/"
+        "coverage": "XDEBUG_MODE=coverage  vendor/bin/phpunit --verbose --coverage-text",
+        "coverage-html": "XDEBUG_MODE=coverage  vendor/bin/phpunit --coverage-html ./coverage/"
     },    
     "prefer-stable": false
 }
