--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Adrian Zapotoczny"
+            "name": "Sylapi"
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=8.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^0.12.77"
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.4"
     },
     "autoload": {
         "psr-4": { "Sylapi\\Courier\\" : "src" }
